@@ -1,5 +1,9 @@
 2013-05-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	- 統計情報をQLabelに表示するように変更
+
 	* src/model/Makefile.am:
 	* src/model/action_sequence_description.cpp:
 	* src/model/action_sequence_description.h:
